fix: header lang dark mode style

--- a/assets/css/ui.css
+++ b/assets/css/ui.css
@@ -117,9 +117,13 @@ select {
   border: 1px solid oklch(var(--border-color));
   padding: 0.25rem 1.5rem 0.5rem 0.25rem;
   border-radius: 0.25rem;
-  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' height='1em' viewBox='0 0 448 512'><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d='M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z'/></svg>");
+  background-image: url('/images/angle-down-solid.svg');
   background-repeat: no-repeat;
   background-position: right 0.5rem center;
+  background-size: auto 40%;
+  @media (prefers-color-scheme: dark) {
+    background-image: url('/images/angle-down-solid-white.svg');
+  }
   &:focus {
     box-shadow: 0 0 0 3px oklch(var(--outline-color));
   }
